--- a/faq/faq.html
+++ b/faq/faq.html
@@ -32,6 +32,9 @@
         <div class="menu">
             <a id="installer" href="ctariff.html"><h1 class="meduim-text">Как сменить тариф?</h1></a>
         </div>
+        <div class-"meun">
+            <a id="installer" href="sftp.html""><h1 class="medium-text">Как подключться по sFTP?</h1></a>
+        </div>
     </main>
     <footer>
         <a class="back-page" href="/tech-problems.html"><p class="next-page2">Предыдущая страница</p></a>
