--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 <body>
     <div class="container">
         <i class="icon fas fa-tools"></i>
-        <h1>Сайт не тех. работах</h1>
-        <p>Пожалуйста, вернитесь позже.</p>
+        <h1>Сайт на тех. работах</h1>
+        <p>Я обновляю вики.</p>
     </div>
 </body>
 </html>
